# omni_slam

./: .gitignore  1_mapping.sh  2_localizing.sh  DEPLOY_ORIN.md  README.md  README_dog_zh.md  bootstrap_dog3_deps.sh  build_on_dog.sh  deploy_to_dog.sh  run_mapping.sh  run_relocalization.sh  setup_dog3_env.sh  setup_env.sh  建图和定位.txt
.github/workflows/: cmake-multi-platform.yml
FAST_LIO/: CMakeLists.txt  README.md  package.xml
FAST_LIO/config/: omni_dog.yaml  omni_dog_qos.yaml  omni_dog_relocalization.yaml  omni_dog_relocalization_qos.yaml
FAST_LIO/launch/: mapping.launch.py  omni_dog.launch.py  omni_dog_relocalization.launch.py  relocalization.launch.py
FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
common/: ros_pcl_conversion.hpp  simple_pcd_io.hpp
icp_relocalization/: CMakeLists.txt  package.xml
icp_relocalization/src/: icp_node.cpp  sac_ia_gicp.cpp
scripts/: build_native_orin.sh  build_orin_cross.sh  package_orin_runtime.sh  package_orin_source.sh  sync_orin_sysroot.sh
toolchains/: orin-aarch64.cmake
